@@ -1,6 +1,6 @@
 Package: car
 Version: 2.0-25
-Date: 2015/02/17
+Date: 2015/02/18
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
